# dorsim

./: .gitignore  README.md  pyproject.toml
doc/: circuit_api.md  examples.md  index.md  pauli_frame.md  tableau_sim.md  update_rules.md
src/dorsim/: __init__.py  circuit.py  cli.py  css_code.py  decoder.py  pauli.py  pauli_frame.py  stab_code.py  tableau_sim.py
tests/: c4c6_pauli.py  steane_code.py  steane_concat_ECT_dtb.py  steane_concat_vs.py  test.ipynb  test_biased_decoder.py  test_compare.py  test_package.py
