[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dorsim"
version = "0.1.0"
description = "Inverse-tableau and Pauli-frame simulator inspired by Stim."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["stim"]

[project.scripts]
dorsim-demo = "dorsim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
